[gd_scene load_steps=9 format=3 uid="uid://chafxig1uei76"]

[ext_resource type="Texture2D" uid="uid://cm0d3dgr4dydy" path="res://src/assets/images/art1.png" id="1_81unb"]
[ext_resource type="Script" uid="uid://dm7s5cs4ex1th" path="res://src/UI/interfaces/main_menu/main_menu.gd" id="1_jh20n"]
[ext_resource type="FontFile" uid="uid://c4v5xp3pumt1r" path="res://src/assets/fonts/xilosa/xilosa_.ttf" id="2_gy3uk"]

[sub_resource type="LabelSettings" id="LabelSettings_odv7t"]
font = ExtResource("2_gy3uk")

[sub_resource type="LabelSettings" id="LabelSettings_bw7w8"]
font = ExtResource("2_gy3uk")

[sub_resource type="LabelSettings" id="LabelSettings_jh20n"]
font = ExtResource("2_gy3uk")

[sub_resource type="LabelSettings" id="LabelSettings_y5lc1"]
font = ExtResource("2_gy3uk")

[sub_resource type="LabelSettings" id="LabelSettings_eterd"]
font = ExtResource("2_gy3uk")

[node name="main_menu" type="Node2D"]
script = ExtResource("1_jh20n")

[node name="bg" type="Sprite2D" parent="."]
texture_filter = 2
position = Vector2(160, 90)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_81unb")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Node" type="Node" parent="CanvasLayer"]

[node name="title" type="Label" parent="CanvasLayer/Node"]
offset_left = 133.0
offset_top = -3.0
offset_right = 176.0
offset_bottom = 20.0
scale = Vector2(2.07454, 2.2705)
text = "Arkhé"
label_settings = SubResource("LabelSettings_odv7t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="img" type="Label" parent="CanvasLayer/Node"]
texture_filter = 1
offset_left = 114.0
offset_top = 40.0
offset_right = 157.0
offset_bottom = 63.0
rotation = -1.57244
text = "&"
label_settings = SubResource("LabelSettings_bw7w8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="img2" type="Label" parent="CanvasLayer/Node"]
texture_filter = 1
offset_left = 240.0
offset_top = -1.0
offset_right = 283.0
offset_bottom = 22.0
rotation = 1.56824
text = "&"
label_settings = SubResource("LabelSettings_bw7w8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 129.0
offset_top = 52.0
offset_right = 198.0
offset_bottom = 114.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 1.0
offset_top = -2.0
offset_right = 88.0
offset_bottom = 57.0
scale = Vector2(1.0368, 1.15503)
alignment = 1

[node name="start" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
mouse_filter = 0
text = "Começar"
label_settings = SubResource("LabelSettings_jh20n")
horizontal_alignment = 1

[node name="credits" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "Créditos"
label_settings = SubResource("LabelSettings_y5lc1")
horizontal_alignment = 1

[node name="exit" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "Sair"
label_settings = SubResource("LabelSettings_eterd")
horizontal_alignment = 1

[connection signal="mouse_entered" from="CanvasLayer/Control/VBoxContainer/start" to="." method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Control/VBoxContainer/start" to="." method="_on_start_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/Control/VBoxContainer/credits" to="." method="_on_credits_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Control/VBoxContainer/credits" to="." method="_on_credits_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/Control/VBoxContainer/exit" to="." method="_on_exit_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Control/VBoxContainer/exit" to="." method="_on_exit_mouse_exited"]
